<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histories"
            android:textSize="25dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            />
        <Button
            android:id="@+id/btn_sort_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_title"
            />
        <Button
            android:id="@+id/btn_sort_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_price"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/lv_hostories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>